src/ui/footer.module.css
.footer {
  @value gap: .5em;

  position: absolute;
  bottom: 0;
  width: calc(100% - gap * 2);
  padding: gap 0;
  margin-top: gap;
  gap: gap;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.icon {
  display: flex;
  width: 3em;
  padding: .5em;
  opacity: .6;
  fill: var(--text);
}

